Fix collab btn, div alignment, request to collab form on projects.html.twig

--- a/web/scss/components/_open-projects.scss
+++ b/web/scss/components/_open-projects.scss
@@ -26,6 +26,7 @@
       }
       .titleAndAuthor {
         margin-left: 15px;
+        width: 100%;
         h3 {
           @include textFormat(30px);
           margin: 0 auto;
